--- a/tnt-aapl-svc/slo.yaml
+++ b/tnt-aapl-svc/slo.yaml
@@ -1,34 +1,19 @@
----
-spec_version: '0.1.0'
+spec_version: ""
+filter: {}
 comparison:
-  compare_with: "single_result"
-  include_result_with_score: "pass"
+  compare_with: single_result
+  include_result_with_score: pass
+  number_of_comparison_results: 1
   aggregate_function: avg
 objectives:
-  - sli: response_time_p95
-    pass:
-      - criteria:
-          - "<=1000"
-    warning:
-      - criteria:
-          - "<=1500"
-  - sli: throughput
-  - sli: error_rate
-    weight: 2
-    pass:
-      - criteria:
-          - "<=1"
-    warning:
-      - criteria:
-          - "<=2"
-  - sli: response_time_p50
-  - sli: response_time_p90
-    pass:
-      - criteria:
-          - "<=500"
-    warning:
-      - criteria:
-          - "<=600"
+- sli: problems
+  displayName: ""
+  pass:
+  - criteria:
+    - <=0
+  warning: []
+  weight: 1
+  key_sli: true
 total_score:
-  pass: "90%"
-  warning: "75%"
+  pass: 90%
+  warning: 70%
